# template-embedded-repo

./: .gitignore  Doxyfile  README.md
.github/workflows/: c_unit_tests.yml  python_unit_tests.yml
c_source/inc/: math.h
c_source/src/: math.c
c_source/test/: CMakeLists.txt  main.cpp  test_dummy.cpp
scripts/: build_requirements.json  format.py  lint.py  python_requirements.txt  setup.py  test_c_source.py  test_python_source.py
